fix openapi.json
